--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -539,6 +539,7 @@ You can overwrite all the styles defined here https://github.com/jpmonettas/flow
 
 == Tutorials and demos
 
+- Presentation at London Clojurians https://www.youtube.com/watch?v=A3AzlqNwUXc
 - Flows basics https://www.youtube.com/watch?v=YnpQMrkj4v8
 - Instrumenting libraries https://youtu.be/YnpQMrkj4v8?t=332
 - Debugging the ClojureScript compiler https://youtu.be/YnpQMrkj4v8?t=533
