Simplify runtime-api and add debug-mode key

--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -712,7 +712,8 @@ You can overwrite all the styles defined here https://github.com/jpmonettas/flow
 == Key bindings
 
 - `Ctrl-g` Cancel any long running task (only search supported yet)
-- `Ctrl-k` Clean all debugger state
+- `Ctrl-l` Clean all debugger state
+- `Ctrl-d` Toggle debug-mode. Will log useful debugging information to the console.
 
 == Tutorials and demos
 
