Make light profile to include :anonymous-fn which makes more sense

--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -353,7 +353,7 @@ and then a right click should show you a menu with two instrumentation commands.
 
 image::user_guide_images/browser_ns_instrumentation.png[]
 
-- `Instrument namespace :light` (disables expressions, bindings, and anonymous functions instrumentation)
+- `Instrument namespace :light` (disables expressions, bindings tracing)
 
 - `Instrument namespace :full` fully instrument everything
 
