--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -33,7 +33,11 @@ If you use https://clojure.org/guides/deps_and_cli[clojure cli] you can start a 
 
 [,bash]
 ----
+;; on linux and mac-os
 clj -Sforce -Sdeps '{:deps {com.github.jpmonettas/flow-storm-dbg {:mvn/version "RELEASE"} com.github.jpmonettas/flow-storm-inst {:mvn/version "RELEASE"}}}'
+
+;; on windows
+clj -Sforce -Sdeps '{:deps {com.github.jpmonettas/flow-storm-dbg {:mvn/version """RELEASE"""} com.github.jpmonettas/flow-storm-inst {:mvn/version """RELEASE"""}}}'
 ----
 
 If you are a https://leiningen.org/[lein] user add both dependencies to your project.clj `:dependencies` and run `lein repl`.
@@ -113,7 +117,11 @@ so to start the debugger and connect to it you run :
 
 [,bash]
 ----
+;; on linux and mac-os
 clj -Sforce -Sdeps '{:deps {com.github.jpmonettas/flow-storm-dbg {:mvn/version "RELEASE"}}}' -X flow-storm.debugger.main/start-debugger :port 9000 :repl-type :shadow :build-id :browser-repl
+
+;; on windows
+clj -Sforce -Sdeps '{:deps {com.github.jpmonettas/flow-storm-dbg {:mvn/version """RELEASE"""}}}' -X flow-storm.debugger.main/start-debugger :port 9000 :repl-type :shadow :build-id :browser-repl
 ----
 
 And that is all you need, the debugger GUI will pop up and everything will be ready.
@@ -746,6 +754,25 @@ You can overwrite all the styles defined here https://github.com/jpmonettas/flow
 - `Ctrl-g` Cancel any long running task (only search supported yet)
 - `Ctrl-l` Clean all debugger state
 - `Ctrl-d` Toggle debug-mode. Will log useful debugging information to the console.
+
+== Working on Windows with WSL2
+
+For those using WSL2 on Windows. You'll need to set up an X-Server on Windows, make sure you drill a hole in the firewall for the port, and then specify the display for the WSL process.
+
+Then everything should work. The steps are:
+
+    . Install VcXsrv on Windows.
+    . Run the XLaunch app on Windows, Choose Multiple Windows, Display Number 0, Start no client, Check all settings on the Extra Settings screen (specifically "Disable access control"
+    . In the WSL2 terminal, run ip addr | grep eth0 to determine the ip of the xserver
+    . On Windows, go to Firewall and network protection, select Advanced Settings, and add a new Inbound Rule in the Windows Defender window that pops up.
+    . For the rule, select Port, then TCP, specific port 6000, then click next twice, and finally name the rule something appropriate, like "XServer rule".
+    . Now find the rule you just created, right click, select Properties, then the Scope tab, and enter the IP address you found at step 3 with an appropriate range in order to allow the port through for the WSL2 subsystem.
+    . Now find the ip address of your windows machine by typing ipconfig in a windows terminal
+    . Now, in the WSL2 terminal, type export DISPLAY=IP_ADDERSS_FOUND_ON_STEP_7:0.0
+    . Also in the WSL2 terminal, type export LIBGL_ALWAYS_INDIRECT=1
+    . Now you can start clojure with the command clj -Sforce -Sdeps '{:deps {com.github.jpmonettas/flow-storm-dbg {:mvn/version "RELEASE"} com.github.jpmonettas/flow-storm-inst {:mvn/version "RELEASE"}}}'
+    . That should get you into the REPL, where you should type (require '[flow-storm.api :as fs-api])
+    . Finally, type (fs-api/local-connect) and you're done!
 
 == Tutorials and demos
 
