--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -361,7 +361,7 @@ and then a right click should show you a menu with two instrumentation commands.
 
 image::user_guide_images/browser_ns_instrumentation.png[]
 
-- `Instrument namespace :light` (disables expressions, bindings tracing)
+- `Instrument namespace :light` - record function arguments and return values (not expressions, no bindings tracing)
 
 - `Instrument namespace :full` fully instrument everything
 
